--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,12 +11,12 @@
     "new:container": "node cli/bin.js new --container"
   },
   "dependencies": {
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.14",
-    "next": "15.1.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.173.0"
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "^0.160.0",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/drei": "^9.88.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
