--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,13 @@
     "new:container": "node cli/bin.js new --container"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.11",
+    "gsap": "^3.12.7",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "^0.160.0",
-    "@react-three/fiber": "^8.15.11",
-    "@react-three/drei": "^9.88.17"
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
